<resources>
    <string name="app_name">UniSHARE</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Update Profile</string>
    <string name="menu_slideshow">My Uploads</string>
    <string name="menu_refer">Refer to a friend</string>
    <string name="menu_logout">Logout</string>
    <string name="or">or</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="file_upload">File Uploaded</string>
    <string name="post_title"></string>
    <string name="post_desc"></string>
    <string name="action_1">Download</string>

</resources>