<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_baseline_update_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_uploads"
            android:icon="@drawable/ic_baseline_file_upload_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_refer"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/menu_refer" />

    </group>
</menu>