<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/app_name"
                />

            <TextView
                android:id="@+id/post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="2dp"
                android:text="@string/post_title"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/post_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"

                android:layout_gravity="bottom"
                android:text="@string/post_desc"
                android:textSize="15sp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/r_green"
                android:text="Download"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>